--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -1,7 +1,7 @@
 .container{
+  height: 100%;
   text-align: center;
-  padding-bottom: 170px;
-  overflow: scroll;
+  
   font-family: -apple-system, "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "\5FAE\8F6F\96C5\9ED1", Arial, sans-serif;
   .picker{
     padding: 20px;
