基本功能点完成

--- a/src/components/cardItem.less
+++ b/src/components/cardItem.less
@@ -1,4 +1,15 @@
 .CardItem{
+  &.Disabled{
+    pointer-events: none;
+    background-color:#f0f0f0;
+    border: 2px solid #e2e2e2;
+    .reviewTime{
+    color: #999999;
+  }
+  .context{
+ color: #999999;
+  }
+  }
   height: 200px;
   background-color: #fff;
   border-radius: 10px;
