--- a/src/app.less
+++ b/src/app.less
@@ -6,3 +6,11 @@ page{
     font-family: inherit;
   }
 }
+body{
+   height: 100%;
+  background-color: #ebebeb;
+  font-family: -apple-system, "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "\5FAE\8F6F\96C5\9ED1", Arial, sans-serif;
+  View{
+    font-family: inherit;
+  }
+}
