--- a/src/pages/index/create-plan.less
+++ b/src/pages/index/create-plan.less
@@ -4,4 +4,9 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  .tips{
+    margin-top: 50px;
+    color: #ccc;
+    font-size: 26px;
+  }
 }
